--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
       <span>&copy; Nonso Oranye</span>
     </footer>
 
-    <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- stats.js lib -->
-    <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
+    <script src="https://threejs.org/examples/js/libs/stats.min.js"></script>
 
     <script src="./assets/script.js"></script>
   </body>
