--- a/index.html
+++ b/index.html
@@ -239,28 +239,41 @@
         <h3 class="section-header">Contact</h3>
 
         <section class="contact-card">
-          <form class="contact-form">
-            <input type="email" name="email" id="email" placeholder="Email" />
+          <div>
+            <h4>I am always up for a Chat,</h4>
+            <p>
+              Pop me an email at
+              <a href="mailto:nonsooranye@gmail.com" class="contact-email"
+                >nonsooranye@gmail.com</a
+              >. <br />
+              Or, link up with me on social media.
+            </p>
+            <div class="contact-socials">
+              <a
+                href="https://twitter.com/OranyeNonso"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./assets/images/twitter.png" alt="twitter"
+              /></a>
+              <a
+                href="https://www.linkedin.com/in/nonso-oranye-8664ab121/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="./assets/images/linkedin.png" alt="linkedIn"
+              /></a>
 
-            <input
-              type="text"
-              name="subject"
-              id="subject"
-              placeholder="Subject"
-            />
-
-            <textarea
-              name="content"
-              id="content"
-              cols="30"
-              rows="10"
-              placeholder="Your Message"
-            ></textarea>
-
-            <div style="text-align: center">
-              <button>Submit</button>
+              <a
+                href="https://github.com/nonicalx"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="./assets/images/github.png" alt="github" />
+              </a>
             </div>
-          </form>
+          </div>
+          <div>
+            <img src="./assets/images/contactMe2.svg" alt="contact" />
+          </div>
         </section>
       </article>
     </main>
