chnage skill structure

--- a/index.html
+++ b/index.html
@@ -49,69 +49,35 @@
         </section>
 
         <section class="about-skill">
-          <!-- HTML -->
-          <div class="skill-rating">
-            <p class="skill-name">HTML</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 90%"></div>
-              <span>90%</span>
-            </section>
-          </div>
-          <!-- End of HTML -->
-          <!-- CSS -->
-          <div class="skill-rating">
-            <p class="skill-name">CSS</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 80%"></div>
-              <span>80%</span>
-            </section>
-          </div>
-          <!-- End of CSS -->
-          <!-- JS -->
-          <div class="skill-rating">
-            <p class="skill-name">Javascript</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 80%"></div>
-              <span>80%</span>
-            </section>
-          </div>
-          <!-- End of JS -->
-          <!-- BS -->
-          <div class="skill-rating">
-            <p class="skill-name">Bootstrap</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 77%"></div>
-              <span>77%</span>
-            </section>
-          </div>
-          <!-- End of BS -->
-          <!-- React -->
-          <div class="skill-rating">
-            <p class="skill-name">React</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 75%"></div>
-              <span>75%</span>
-            </section>
-          </div>
-          <!-- End React -->
-          <!-- React Native -->
-          <div class="skill-rating">
-            <p class="skill-name">React Native</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 55%"></div>
-              <span>55%</span>
-            </section>
-          </div>
-          <!-- End of Native -->
-          <!-- Flutter -->
-          <div class="skill-rating">
-            <p class="skill-name">Flutter</p>
-            <section class="progress">
-              <div class="progress-bar" style="width: 50%"></div>
-              <span>50%</span>
-            </section>
-          </div>
-          <!-- End of Flutter -->
+          <h4>Skill Sets</h4>
+          <ul>
+            <li>
+              <img src="./assets/images/html.png" alt="html" />
+              <p>HTML</p>
+            </li>
+            <li>
+              <img src="./assets/images/css.png" alt="css" />
+              <p>CSS</p>
+            </li>
+
+            <li>
+              <img src="./assets/images/bootstrap.png" alt="bootstrap" />
+              <p>Bootstrap</p>
+            </li>
+            <li>
+              <img src="./assets/images/js.png" alt="js" />
+              <p>Javascript</p>
+            </li>
+
+            <li>
+              <img src="./assets/images/react.png" alt="react" />
+              <p>React</p>
+            </li>
+            <li>
+              <img src="./assets/images/flutter.png" alt="flutter" />
+              <p>Flutter</p>
+            </li>
+          </ul>
         </section>
       </article>
 
