--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     </article>
     <header class="header">
       <nav>
-        <h5><span class="n-logo">N</span>onso Oranye</h5>
+        <h5>
+          <span class="n-logo">N</span
+          ><span class="remaining">onso Oranye</span>
+        </h5>
         <ul class="nav-list">
           <li><a href="#about">About</a></li>
           <li><a href="#projects">Projects</a></li>
