--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       </article>
     </main>
     <footer class="footer">
-      <div>
+      <!-- <div>
         <a
           href="https://twitter.com/OranyeNonso"
           target="_blank"
@@ -268,7 +268,7 @@
         >
           <img src="./assets/images/github.png" alt="github" />
         </a>
-      </div>
+      </div> -->
       <p>+ + + +</p>
       <span>&copy; Nonso Oranye</span>
     </footer>
