Add text update

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <section class="banner" id="particles-js">
         <div>
           <h2>Hello,</h2>
-          <p>I'm Nonso Oranye.</p>
+          <p>I am Nonso Oranye.</p>
           <br />
-          <p>I am a Front Developer</p>
+          <p>I am Software Engineer</p>
         </div>
       </section>
     </article>
@@ -40,14 +40,16 @@
             <div class="logo-container"><span class="n-logo-lg">N</span></div>
           </div>
           <div class="about-text">
-            I am Nonso, a highly creative Frontend developer with a knack for
-            implementing great designs to perfection that users love. I write
-            code that is great and so simple to understand that nobody on the
-            team loses their mind trying to comprehend it.<br />
+            Welcome to my space 🤗, This is a simple page to state my
+            qualifications and projects that I have worked on in the pasted. Any
+            dead link you might find will be replaced in the future or is
+            currently being replaced.<br /><br />
             I have worked with various teams over the years and built some
             awesome projects using languages, libraries and frameworks such as
-            Javascript, typescript, Css, HTML, Bootstrap, React.js, Redux,
-            Style-Components, Next.js.
+            Javascript, typescript, CSS, HTML, Bootstrap, React.js, Redux,
+            Style-Components, Next.js, Tailwind, Lightning Web Components,
+            Apex.<br /><br />
+            Not so much to see here but Happy Roaming 😇
           </div>
         </section>
 
