--- a/index.html
+++ b/index.html
@@ -90,13 +90,8 @@
         <h3 class="section-header">Projects</h3>
         <section class="project-grid">
           <div
-            class="project"
-            style="
-              background: url('/assets/images/re.png');
-              background-position: center;
-              background-size: contain;
-              background-repeat: no-repeat;
-            "
+            class="project project-bg-center project-bg-contain"
+            style="background-image: url('/assets/images/re.png')"
           >
             <section>
               <p>Resource Edge</p>
@@ -109,13 +104,8 @@
             </section>
           </div>
           <div
-            class="project"
-            style="
-              background: url('/assets/images/muon.png');
-              background-position: center;
-              background-size: cover;
-              background-repeat: no-repeat;
-            "
+            class="project project-bg-center project-bg-contain"
+            style="background-image: url('/assets/images/muon.png')"
           >
             <section>
               <p>Muon Club</p>
@@ -129,12 +119,7 @@
           </div>
           <div
             class="project"
-            style="
-              background: url('/assets/images/pace.png');
-              background-position: left;
-              background-size: cover;
-              background-repeat: no-repeat;
-            "
+            style="background-image: url('/assets/images/pace.png')"
           >
             <section>
               <p>Pace</p>
@@ -148,12 +133,7 @@
           </div>
           <div
             class="project"
-            style="
-              background: url('/assets/images/makinsight.png');
-              background-position: left;
-              background-size: cover;
-              background-repeat: no-repeat;
-            "
+            style="background-image: url('/assets/images/makinsight.png')"
           >
             <section>
               <p>Makinsight</p>
@@ -167,12 +147,7 @@
           </div>
           <div
             class="project"
-            style="
-              background: url('/assets/images/biafra.png');
-              background-position: left;
-              background-size: cover;
-              background-repeat: no-repeat;
-            "
+            style="background-image: url('/assets/images/biafra.png')"
           >
             <section>
               <p>Biafra Memories</p>
@@ -186,12 +161,7 @@
           </div>
           <div
             class="project"
-            style="
-              background: url('/assets/images/journalBox.png');
-              background-position: left;
-              background-size: cover;
-              background-repeat: no-repeat;
-            "
+            style="background-image: url('/assets/images/journalBox.png')"
           >
             <section>
               <p>Journal Box</p>
@@ -249,28 +219,6 @@
       </article>
     </main>
     <footer class="footer">
-      <!-- <div>
-        <a
-          href="https://twitter.com/OranyeNonso"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img src="./assets/images/twitter.png" alt="twitter"
-        /></a>
-        <a
-          href="https://www.linkedin.com/in/nonso-oranye-8664ab121/"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><img src="./assets/images/linkedin.png" alt="linkedIn"
-        /></a>
-
-        <a
-          href="https://github.com/nonicalx"
-          target="_blank"
-          rel="noopener noreferrer"
-        >
-          <img src="./assets/images/github.png" alt="github" />
-        </a>
-      </div> -->
       <p>+ + + +</p>
       <span>&copy; Nonso Oranye</span>
     </footer>
